# agentic-memory-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.cursor/hooks/state/: continual-learning.json
.github/workflows/: ci.yml
.scratch/: commit_msg_phaseB.txt  commit_msg_unify.txt  pr_body_phaseB.md  pr_body_unify.md
examples/: fleet_registry.example.toml
src/agentic_memory/: __init__.py  audit.py  json_util.py  registry.py  routing.py  server.py  types.py
tests/: conftest.py  test_audit.py  test_contract.py  test_registry.py  test_registry_security.py  test_routing.py  test_server.py  test_server_helpers.py
